--- a/AsteriskARI/AsteriskARI.csproj
+++ b/AsteriskARI/AsteriskARI.csproj
@@ -152,6 +152,8 @@
     <None Include="ComObjectFor1C.snk" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="references.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
